<resources>
    <string name="app_name">Local Express</string>
    <string name="title">Title</string>
    <string name="change_uri">Change URI or URL</string>
    <string name="add_title">Add title</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="select_picture">Select Picture</string>
    <string name="go_gallery">Go to Gallery</string>
</resources>